--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -374,9 +374,9 @@
 				<div class="contenidoGen conpub">
 					<div class="busador">						
 						<div class="input-group sinbor">
-							<input type="text" class="form-control" placeholder="Buscar">
+							<input type="text" id="buscarCate" class="form-control" placeholder="Buscar">
 							<span class="input-group-btn">
-								<button class="btn btn-default" type="button"><i class="glyphicon glyphicon-search"></i></button>
+								<button class="btn btn-default"  id="btnBuscar" type="button"><i class="glyphicon glyphicon-search"></i></button>
 							</span>
 						</div>
 					</div>
@@ -529,6 +529,7 @@
 			<div class="ventana hidden" id="pantalla13">
 				<div class="contenidoGen">
 					<div class="tituloCat"></div>
+					<div class="descripcionCat"></div>
 					<div class="listcursos">
 					</div>
 					<div class="listclasesind">
@@ -585,6 +586,7 @@
 			<div class="ventana hidden" id="pantalla16">
 				<div class="contenidoGen">
 					<h4 class="tituloClase"></h4>
+					<div class="descripcionClase"></div>
 					<div class="btnPlayMed ct_audClaseP viole" onclick="togglePlaying('audClaseP')">
 						<div class="circmed viole">
 							<div class="circsma viole">
