--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
 					<button class="btn btn-default btnGenerico btnViole" id="btnLogin">Ingresar</button>
 					<div class="links">
 						<a href="#" id="registro" class="btnSinborde minilinks">Registro</a><br>
-						<a href="#" class="btnSinborde minilinks">Olvide mi password</a>
+						<a href="#" id="recpass" class="btnSinborde minilinks">Olvide mi password</a>
 					</div>
 				</div>
 			</div>
@@ -85,6 +85,15 @@
 						<i class="glyphicon glyphicon-eye-open" id="changeTypePass3"></i>
 					</div>
 					<button class="btn btn-default btnGenerico btnViole" id="btnRegistro">Registrarse</button>
+				</div>
+			</div>
+			<div class="ventana hidden" id="pantalla0c">
+				<div class="boxForm">
+					<div class="tiotge">Ingresa tu email</div>
+					<div class="form-group">
+						<input type="email" class="form-control" id="email3" placeholder="Email">
+					</div>
+					<button class="btn btn-default btnGenerico btnViole" id="btnRecpass">Recuperar contraseña</button>
 				</div>
 			</div>
 			<div class="ventana hidden" id="pantalla1">
