--- a/www/index.html
+++ b/www/index.html
@@ -764,7 +764,7 @@
 				<div class="contenidoGen">
 					<h4 class="tituloClaseInd"></h4>
 					<button class="btnGenerico btnViole espaciobajo" id="btnRepetirClaseInd">Repetir</button>
-					<button class="btnGenerico btnViole espaciobajo" data-apa="pantalla13">Volver</div>
+					<button class="btnGenerico btnViole espaciobajo btnVolverapa" data-apa="pantalla13">Volver</div>
 					<div class="bototneraBottom conpub">
 						<div class="boxprem"><img src="img/boxpremium.png"></div>
 						<div class="btotonbotom btnHome"><i class="icon-iconHome"></i> Home</div>
